2005-08-02  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-calendar.c : Check for NULL target
	* exchange-contacts.c : Similar
	* exchange-folder-permission.c : Similar
	* exchange-folder.c : Similar

2005-08-01  Praveen Kumar  <kpraveen@novell.com>

	* exchnage-config-listener.c 
	(exchange_add_autocompletion_folders) : Added new
	(add_defaults_for_account) : Added a call to the newly added function
	to select GAL for autocompletion by default. Fixes bug 303998
	
2005-07-27  Praveen Kumar <kpraveen@novell.com>

	* exchange-folder.c (org_gnome_exchange_folder_subscription) : Handle
	error conditions if folder subscription fails. Fixes bug 311712
	
2005-07-27  Harry Lu  <harry.lu@sun.com>

	Only show the unsubscribe menu if it is an exchange folder.
	* exchange-folder.c:
	(org_gnome_exchange_check_address_book_subscribed),
	(org_gnome_exchange_check_subscribed):

2005-07-25  Shakti Sen <shprasad@novell.com>

	* org-gnome-exchange-operations.eplug.in: Fixed a small typo.
	The file name is org-gnome-exchange-tasks-subscription.xml, not
	org-gnome-exchange-task-subscription.xml.

2005-07-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-calendar.c (e_exchange_calendar_pcalendar) : Add the size
	label only if the calendar exists.
	* exchange-contacts.c (e_exchange_contacts_pcontacts) : Add the size
	label only if the addressbook exists.

2005-07-25  Shakti Sen <shprasad@novell.com>

	* Makefile.am: Added EVOLUTION_CALENDAR_CFLAGS and widgets in 'INCLUDES'.
	* org-gnome-exchange-operations.eplug.in: Added the hooks for Calendar,
	Tasks and Contacts.
	* exchange-folder-permission.c: Added new functions to support 
	'File->Permissions' for all the components.
	* org-gnome-folder-permissions.xml: Changed the placeholder from 'Folder'
	to 'File' menu for 'Permissions' menu-item.
	
	Fixes bug #231968 (Partly).

2005-07-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-account-setup.c 
	(org_gnome_exchange_show_folder_size_factory): Takes care of displaying